Add tetrahedral elements to Poisson MMS
Missing Tet20 elements, since we have no conversion from Tet4 meshes
at the moment.

--- a/notebooks/convergence/Poisson_MMS.ipynb
+++ b/notebooks/convergence/Poisson_MMS.ipynb
@@ -121,12 +121,16 @@
    "source": [
     "def summary_key_3d(summary):\n",
     "    element = summary['element_name']\n",
-    "    if element == 'Hex8':\n",
-    "        return 0\n",
-    "    elif element == 'Hex20':\n",
+    "    if element == 'Tet4':\n",
     "        return 1\n",
-    "    elif element == 'Hex27':\n",
+    "    if element == 'Hex8':\n",
     "        return 2\n",
+    "    if element == 'Tet10':\n",
+    "        return 3\n",
+    "    elif element == 'Hex20':\n",
+    "        return 4\n",
+    "    elif element == 'Hex27':\n",
+    "        return 5\n",
     "    return 3\n",
     "    \n",
     "data_folder_3d = os.path.join(data_folder, \"poisson_3d_mms\")\n",
@@ -135,7 +139,7 @@
     "\n",
     "fig = prepare_convergence_plot(summaries_3d)\n",
     "draw_convergence_line(fig.gca(), p=3, x0=0.25, y0=1e-3, label_xoffset = 0.1)\n",
-    "draw_convergence_line(fig.gca(), p=2, x0=0.25, y0=4e-2, label_xoffset = -0.1)\n",
+    "draw_convergence_line(fig.gca(), p=2, x0=0.25, y0=4e-2, label_xoffset = -0.06)\n",
     "\n",
     "plt.show(fig)"
    ]
