Add H1 seminorm errors to Poisson MMS

--- a/notebooks/convergence/Poisson_MMS.ipynb
+++ b/notebooks/convergence/Poisson_MMS.ipynb
@@ -50,18 +50,43 @@
     "    ax.axline((x0, y0), (x1, y1), color = \"Gray\", linestyle=\"--\")\n",
     "    ax.annotate(\"$O(h^{})$\".format(p), (x0 + label_xoffset, y0))\n",
     "    \n",
-    "def prepare_convergence_plot(summaries):\n",
+    "def error_field_from_type(error_type):\n",
+    "    if error_type == 'L2':\n",
+    "        return 'L2_errors'\n",
+    "    elif error_type == 'H1_seminorm':\n",
+    "        return 'H1_seminorm_errors'\n",
+    "    else:\n",
+    "        raise \"Unknown error type\"\n",
+    "        \n",
+    "def label_for_error_type(error_type):\n",
+    "    if error_type == 'L2':\n",
+    "        return '$L^2$ error $|| u - u_h ||_{L^2}$'\n",
+    "    elif error_type == 'H1_seminorm':\n",
+    "        return '$H^1$ seminorm error $| u - u_h |_{H^1}$'\n",
+    "    else:\n",
+    "        raise \"Unknown error type\"\n",
+    "        \n",
+    "def title_for_error_type(error_type):\n",
+    "    if error_type == 'L2':\n",
+    "        return '$L^2$ error'\n",
+    "    elif error_type == 'H1_seminorm':\n",
+    "        return '$H^1$ seminorm error'\n",
+    "    else:\n",
+    "        raise \"Unknown error type\"\n",
+    "    \n",
+    "def prepare_convergence_plot(summaries, error_type = 'L2'):\n",
     "    fig = plt.figure(figsize=(8, 6), dpi = 200)\n",
     "    ax = fig.gca()\n",
     "\n",
     "    for summary in summaries:\n",
     "        x = summary['resolutions']\n",
-    "        y = summary['L2_errors']\n",
+    "        y = summary[error_field_from_type(error_type)]\n",
     "        ax.loglog(x, y, label = summary['element_name'], marker = 'o')\n",
     "\n",
     "    ax.legend(loc = 'lower right')\n",
     "    ax.set_xlabel(\"h\")\n",
-    "    ax.set_ylabel(\"$L^2$ error $|| u - u_h ||_{L^2}$\")\n",
+    "    ax.set_ylabel(label_for_error_type(error_type))\n",
+    "    ax.set_title(title_for_error_type(error_type))\n",
     "    ax.grid()\n",
     "    \n",
     "    return fig"
@@ -99,11 +124,17 @@
     "# Sort summaries according to order in plot\n",
     "summaries_2d = sorted(load_summaries(data_folder_2d), key = summary_key_2d)\n",
     "\n",
-    "fig = prepare_convergence_plot(summaries_2d)\n",
+    "# L2 error\n",
+    "fig = prepare_convergence_plot(summaries_2d, error_type='L2')\n",
     "draw_convergence_line(fig.gca(), p=3, x0=0.25, y0=1e-3, label_xoffset = 0.1)\n",
     "draw_convergence_line(fig.gca(), p=2, x0=0.25, y0=2e-1, label_xoffset = -0.1)\n",
+    "plt.show(fig)\n",
     "\n",
-    "plt.show(fig)"
+    "# H1 seminorm errors\n",
+    "fig = prepare_convergence_plot(summaries_2d, error_type='H1_seminorm')\n",
+    "draw_convergence_line(fig.gca(), p=1, x0=0.25, y0=1.25, label_xoffset = -0.1)\n",
+    "draw_convergence_line(fig.gca(), p=2, x0=0.25, y0=3e-2, label_xoffset = 0.1)\n",
+    "plt.show(fig)\n"
    ]
   },
   {
@@ -137,12 +168,23 @@
     "# Sort summaries according to order in plot\n",
     "summaries_3d = sorted(load_summaries(data_folder_3d), key = summary_key_3d)\n",
     "\n",
-    "fig = prepare_convergence_plot(summaries_3d)\n",
+    "fig = prepare_convergence_plot(summaries_3d, error_type='L2')\n",
     "draw_convergence_line(fig.gca(), p=3, x0=0.25, y0=1e-3, label_xoffset = 0.1)\n",
     "draw_convergence_line(fig.gca(), p=2, x0=0.25, y0=4e-2, label_xoffset = -0.06)\n",
+    "plt.show(fig)\n",
     "\n",
+    "fig = prepare_convergence_plot(summaries_3d, error_type='H1_seminorm')\n",
+    "draw_convergence_line(fig.gca(), p=1, x0=0.25, y0=1.25, label_xoffset = -0.1)\n",
+    "draw_convergence_line(fig.gca(), p=2, x0=0.25, y0=3e-2, label_xoffset = 0.1)\n",
     "plt.show(fig)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
