Implement StVKMaterial and improve tests

--- a/notebooks/solid/Hyperelastic Materials.ipynb
+++ b/notebooks/solid/Hyperelastic Materials.ipynb
@@ -76,6 +76,48 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Saint Venant-Kirchhoff"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def green_strain_tensor(F):\n",
+    "    assert F.shape[0] == F.shape[1]\n",
+    "    return (np.matmul(F.transpose(), F) - np.identity(F.shape[0])) / 2\n",
+    "\n",
+    "def psi_stvk(F):\n",
+    "    e = green_strain_tensor(F)\n",
+    "    return mu * np.tensordot(e, e) + (λ / 2) * e.trace() ** 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "psi_2d = psi_stvk(F_2d)\n",
+    "print(\"Psi 2D: \", psi_2d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "psi_3d = psi_stvk(F_3d)\n",
+    "print(\"Psi 3D: \", psi_3d)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
