Implement and test Neo-Hookean energy

--- a/notebooks/solid/Hyperelastic Materials.ipynb
+++ b/notebooks/solid/Hyperelastic Materials.ipynb
@@ -118,6 +118,46 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Neo-Hookean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def psi_neohookean(F):\n",
+    "    I_C = np.matmul(F.transpose(), F).trace()\n",
+    "    J = np.linalg.det(F)\n",
+    "    logJ = np.log(J)\n",
+    "    return (mu / 2) * (I_C - 3) - mu * logJ + (λ / 2) * (logJ) ** 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "psi_2d = psi_neohookean(F_2d)\n",
+    "print(\"Psi 2D: \", psi_2d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "psi_3d = psi_neohookean(F_3d)\n",
+    "print(\"Psi 3D: \", psi_3d)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
