--- a/notebooks/solid/Hyperelastic Materials.ipynb
+++ b/notebooks/solid/Hyperelastic Materials.ipynb
@@ -130,11 +130,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def psi_neohookean(F):\n",
+    "def psi_neohookean(F, dim):\n",
     "    I_C = np.matmul(F.transpose(), F).trace()\n",
     "    J = np.linalg.det(F)\n",
     "    logJ = np.log(J)\n",
-    "    return (mu / 2) * (I_C - 3) - mu * logJ + (λ / 2) * (logJ) ** 2"
+    "    return (mu / 2) * (I_C - dim) - mu * logJ + (λ / 2) * (logJ) ** 2"
    ]
   },
   {
@@ -143,7 +143,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "psi_2d = psi_neohookean(F_2d)\n",
+    "psi_2d = psi_neohookean(F_2d, 2)\n",
     "print(\"Psi 2D: \", psi_2d)"
    ]
   },
@@ -153,7 +153,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "psi_3d = psi_neohookean(F_3d)\n",
+    "psi_3d = psi_neohookean(F_3d, 3)\n",
     "print(\"Psi 3D: \", psi_3d)"
    ]
   },
