--- a/notebooks/convergence/Poisson_MMS.ipynb
+++ b/notebooks/convergence/Poisson_MMS.ipynb
@@ -126,14 +126,14 @@
     "\n",
     "# L2 error\n",
     "fig = prepare_convergence_plot(summaries_2d, error_type='L2')\n",
-    "draw_convergence_line(fig.gca(), p=3, x0=0.25, y0=1e-3, label_xoffset = 0.1)\n",
-    "draw_convergence_line(fig.gca(), p=2, x0=0.25, y0=2e-1, label_xoffset = -0.1)\n",
+    "draw_convergence_line(fig.gca(), p=3, x0=0.25, y0=5e-4, label_xoffset = 0.1)\n",
+    "draw_convergence_line(fig.gca(), p=2, x0=0.25, y0=1e-1, label_xoffset = -0.1)\n",
     "plt.show(fig)\n",
     "\n",
     "# H1 seminorm errors\n",
     "fig = prepare_convergence_plot(summaries_2d, error_type='H1_seminorm')\n",
-    "draw_convergence_line(fig.gca(), p=1, x0=0.25, y0=1.25, label_xoffset = -0.1)\n",
-    "draw_convergence_line(fig.gca(), p=2, x0=0.25, y0=3e-2, label_xoffset = 0.1)\n",
+    "draw_convergence_line(fig.gca(), p=1, x0=0.25, y0=1.0, label_xoffset = -0.1)\n",
+    "draw_convergence_line(fig.gca(), p=2, x0=0.25, y0=2e-2, label_xoffset = 0.1)\n",
     "plt.show(fig)\n"
    ]
   },
@@ -169,13 +169,13 @@
     "summaries_3d = sorted(load_summaries(data_folder_3d), key = summary_key_3d)\n",
     "\n",
     "fig = prepare_convergence_plot(summaries_3d, error_type='L2')\n",
-    "draw_convergence_line(fig.gca(), p=3, x0=0.25, y0=1e-3, label_xoffset = 0.1)\n",
-    "draw_convergence_line(fig.gca(), p=2, x0=0.25, y0=4e-2, label_xoffset = -0.06)\n",
+    "draw_convergence_line(fig.gca(), p=3, x0=0.25, y0=2e-4, label_xoffset = 0.1)\n",
+    "draw_convergence_line(fig.gca(), p=2, x0=0.25, y0=2e-2, label_xoffset = -0.06)\n",
     "plt.show(fig)\n",
     "\n",
     "fig = prepare_convergence_plot(summaries_3d, error_type='H1_seminorm')\n",
-    "draw_convergence_line(fig.gca(), p=1, x0=0.25, y0=1.25, label_xoffset = -0.1)\n",
-    "draw_convergence_line(fig.gca(), p=2, x0=0.25, y0=3e-2, label_xoffset = 0.1)\n",
+    "draw_convergence_line(fig.gca(), p=1, x0=0.25, y0=0.5, label_xoffset = -0.1)\n",
+    "draw_convergence_line(fig.gca(), p=2, x0=0.25, y0=1e-2, label_xoffset = 0.1)\n",
     "plt.show(fig)"
    ]
   },
@@ -196,7 +196,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -210,7 +210,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
