Add Tet20 to Poisson convergence tests

--- a/notebooks/convergence/Poisson_MMS.ipynb
+++ b/notebooks/convergence/Poisson_MMS.ipynb
@@ -134,7 +134,7 @@
     "fig = prepare_convergence_plot(summaries_2d, error_type='H1_seminorm')\n",
     "draw_convergence_line(fig.gca(), p=1, x0=0.25, y0=1.0, label_xoffset = -0.1)\n",
     "draw_convergence_line(fig.gca(), p=2, x0=0.25, y0=2e-2, label_xoffset = 0.1)\n",
-    "plt.show(fig)\n"
+    "plt.show(fig)"
    ]
   },
   {
@@ -147,7 +147,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "def summary_key_3d(summary):\n",
@@ -162,6 +164,8 @@
     "        return 4\n",
     "    elif element == 'Hex27':\n",
     "        return 5\n",
+    "    elif element == 'Tet20':\n",
+    "        return 6\n",
     "    return 3\n",
     "    \n",
     "data_folder_3d = os.path.join(data_folder, \"poisson_3d_mms\")\n",
@@ -169,13 +173,15 @@
     "summaries_3d = sorted(load_summaries(data_folder_3d), key = summary_key_3d)\n",
     "\n",
     "fig = prepare_convergence_plot(summaries_3d, error_type='L2')\n",
-    "draw_convergence_line(fig.gca(), p=3, x0=0.25, y0=2e-4, label_xoffset = 0.1)\n",
+    "draw_convergence_line(fig.gca(), p=3, x0=0.25, y0=2e-4, label_xoffset = 0.025)\n",
     "draw_convergence_line(fig.gca(), p=2, x0=0.25, y0=2e-2, label_xoffset = -0.06)\n",
+    "draw_convergence_line(fig.gca(), p=4, x0=0.25, y0=2e-5, label_xoffset = -0.06)\n",
     "plt.show(fig)\n",
     "\n",
     "fig = prepare_convergence_plot(summaries_3d, error_type='H1_seminorm')\n",
     "draw_convergence_line(fig.gca(), p=1, x0=0.25, y0=0.5, label_xoffset = -0.1)\n",
-    "draw_convergence_line(fig.gca(), p=2, x0=0.25, y0=1e-2, label_xoffset = 0.1)\n",
+    "draw_convergence_line(fig.gca(), p=2, x0=0.25, y0=1e-2, label_xoffset = 0.025)\n",
+    "draw_convergence_line(fig.gca(), p=3, x0=0.25, y0=2e-3, label_xoffset = -0.06)\n",
     "plt.show(fig)"
    ]
   },
@@ -210,7 +216,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
